<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".Doctor.DoctorHomePageActivity"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary_color"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_home"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/ivNotification_doctor"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/view"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:src="@drawable/notificari" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/toolbar"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view"
            android:layout_centerInParent="true"
            android:orientation="vertical">



            <androidx.cardview.widget.CardView
                android:id="@+id/cwPatient"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="65dp"
                        android:text="@string/pacienti"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/user"
                        android:layout_centerVertical="true" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_baseline_arrow_right_24" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cwAppointment"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="65dp"
                        android:text="@string/programari"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/medical_appointment" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_baseline_arrow_right_24" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cwFeedback"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="65dp"
                        android:text="@string/feedback_pacienti"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/feedback" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_baseline_arrow_right_24" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:backgroundTint="@color/light_blue"
            android:clickable="true"
            android:contentDescription="@string/chat"
            android:focusable="true"
            app:tint="@null"
            android:src="@drawable/chat" />
    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu">

        <RelativeLayout
            android:id="@+id/rlLogout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="5dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/ic_baseline_logout_24"
                 />
        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>